Fixed login and register windows' alignment

--- a/public/css/index_css.css
+++ b/public/css/index_css.css
@@ -415,10 +415,6 @@ body{
     color: #f0ecec;
 }
 
-#back_login {
-    margin-left: 40px;
-}
-
 .btn_login{
     text-align: center;
     height: max-content;
@@ -428,7 +424,6 @@ body{
     background-color: #DCA73A;
     color: white;
     text-transform: uppercase;
-    margin-left: 62px;
     border-radius: 20px;
     max-width: 150px;
     min-width: 50px;
@@ -443,7 +438,6 @@ body{
     background-color: #DCA73A;
     color: white;
     text-transform: uppercase;
-    margin-left: 54px;
     border-radius: 20px;
     max-width: 150px;
     min-width: 50px;
@@ -456,6 +450,7 @@ body{
 }
 
 #popup {
+    text-align: center;
     position: fixed;
     top: 40%;
     left: 50%;
@@ -480,25 +475,15 @@ body{
     align-items: center;
 }
 
-.text-muted {
-    margin-left: 25px;
-}
-
 .close_popup {
     color: #4e4e4e;
-    margin-left: 158px;
 }
 
 .back_login {
     color: #4e4e4e;
 }
 
-#remember_me {
-    margin-left: 5px;
-}
-
 .form-check-label {
-    margin-left: 20px;
     font-family: 'Open Sans', sans-serif;
     font-size: small;
 }
